test_fm/_test22.nj
//
// one method with a local variable and new expression
// assigning a superclass object to a subclass variable
//

public class Main extends Object {
  public static void main() {
    local Main b;
    b = new Object(a,b);
  }
}
